Fix QRCode Page tab text align to left (#9)

--- a/src/pages/QRCodePage/index.scss
+++ b/src/pages/QRCodePage/index.scss
@@ -1,4 +1,4 @@
-.ant-tabs .ant-tabs-left-bar .ant-tabs-tab {
+.qr-code-v-tabs.ant-tabs .ant-tabs-left-bar .ant-tabs-tab {
   text-align: left;
 }
 
